...
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:defaultNavHost="true"
      app:navGraph="@navigation/activity_ota_update_nav_graph" />

    <View
      android:id="@+id/progress_background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="?progressOverlayColor"
      android:clickable="true"
      android:focusable="true"
      android:visibility="invisible"
      app:visibilityAnim="@{viewModel.progressVisible}"
      tools:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/progress_view"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:elevation="@dimen/dot_half"
      android:visibility="invisible"
      app:cardBackgroundColor="?backgroundColor"
      app:layout_constraintBottom_toBottomOf="parent"
...
